--- a/lab1/ZabaraLab01-9.htm
+++ b/lab1/ZabaraLab01-9.htm
@@ -60,3 +60,28 @@ hello()
 
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+  <meta charset="utf-8">
+  <title>Лабораторна 1 — IvanennkoLab01-9</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    footer { margin-top: 2em; font-size: 0.95em; }
+  </style>
+</head>
+<body>
+  <h1>Лабораторна робота №1</h1>
+
+ 
+  <p><a href="../lab5/ZabaraLab05-3.htm">Мої гіперпосилання</a></p>
+
+
+  <!-- 4. Підпис як посилання на електронну адресу -->
+  <footer>
+    <p>З повагою, <a href="https://mail.google.com/mail/?view=cm&to=deniszabara.freelance@gmail.com">Забара Д.В.</a></p>
+  </footer>
+</body>
+</html>
