--- a/lab6/ZabaraLab01-9.htm
+++ b/lab6/ZabaraLab01-9.htm
@@ -13,7 +13,7 @@
 
     <!-- Фото -->
     <p align="center">
-        <img src="photo.jpg" width="200" alt="Моє фото">
+        <img src="../lab1/photo.jpg" width="200" alt="Моє фото">
     </p>
 
     <!-- Текст про себе -->
